--- a/books/templates/books/librarian/add_book.html
+++ b/books/templates/books/librarian/add_book.html
@@ -4,7 +4,7 @@
 
 {% if registered %}
 	<h2> You book has been added.</h2>
-		<meta http-equiv="refresh" content="3;url=/clerk/" />
+		<meta http-equiv="refresh" content="3;url=/librarian/" />
 		{% else %}
  <div class="container">
 
