--- a/books/templates/books/borrower/search.html
+++ b/books/templates/books/borrower/search.html
@@ -2,5 +2,35 @@
 
 {% block content %}
 
+<div class="container">
+	{% if flag %}
+	 <h3> Search Result </h3>
+	<table>
+		 <tr>
+			 <td> Call Number </td>
+			 <td> Title </td>
+			 <td> Copies Available </td>
+		</tr>
+
+		{% for book in books %}	
+		<tr>
+			<td> {{book.0}}</td>
+			<td> {{book.1}}</td>
+			<td> {{book.2}} </td>
+		</tr>
+		{% endfor %}
+	</table>
+	{% else%}
+ <form class="report" method="post" action="/borrower/search/" role="form">
+		{% csrf_token %}
+        <h2 class="form-signin-heading">Search Books</h2>
+		{{form.as_p}}
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+	</form>
+
+
+	{% endif %}
+	</div>
+
 
 {% endblock %}
