--- a/books/templates/books/librarian/book_report.html
+++ b/books/templates/books/librarian/book_report.html
@@ -3,4 +3,43 @@
 {% block content %}
 
 
+
+
+ <div class="container">
+
+	 {% if flag %}
+
+	 <table>
+		 <tr>
+			 <td> Book Number </td>
+			 <td> Date Checked Out </td>
+			 <td> Due Date </td>
+		</tr>
+
+		{% for book in books %}	
+		<tr>
+			<td> {{book.0}}</td>
+			<td> {{book.1}}</td>
+			<td> {{book.2}} </td>
+		</tr>
+		{% endfor %}
+	</table>
+
+
+	 {% else %}
+
+      <form class="report" method="post" action="/librarian/book_report/" role="form">
+		{% csrf_token %}
+        <h2 class="form-signin-heading">Related Subject</h2>
+
+        <input type="text" class="form-control" name="subject" placeholder="subject(optional)">
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+	</form>
+
+	{% endif %}
+
+    </div> <!-- /container -->
+
+
+
 {% endblock %}
