--- a/books/templates/books/librarian/popular_book.html
+++ b/books/templates/books/librarian/popular_book.html
@@ -3,4 +3,35 @@
 {% block content %}
 
 
+<div class="container">
+	{% if flag %}
+	 <h3> The Most Popular Books </h3>
+	<table>
+		 <tr>
+			 <td> Call Number </td>
+			 <td> Title </td>
+			 <td> Signed out times  </td>
+		</tr>
+
+		{% for book in books %}	
+		<tr>
+			<td> {{book.0}}</td>
+			<td> {{book.1}}</td>
+			<td> {{book.2}} </td>
+		</tr>
+		{% endfor %}
+	</table>
+	{% else%}
+ <form class="report" method="post" action="/librarian/popular_book/" role="form">
+		{% csrf_token %}
+        <h2 class="form-signin-heading">Select the year and limit</h2>
+		{{form.as_p}}
+
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+	</form>
+
+
+	{% endif %}
+	</div>
+
 {% endblock %}
