--- a/books/templates/books/librarian/book_report.html
+++ b/books/templates/books/librarian/book_report.html
@@ -33,7 +33,7 @@
         <h2 class="form-signin-heading">Related Subject</h2>
 
         <input type="text" class="form-control" name="subject" placeholder="subject(optional)">
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Get report</button>
 	</form>
 
 	{% endif %}
