--- a/books/templates/books/librarian/popular_book.html
+++ b/books/templates/books/librarian/popular_book.html
@@ -27,7 +27,7 @@
         <h2 class="form-signin-heading">Select the year and limit</h2>
 		{{form.as_p}}
 
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">get list</button>
 	</form>
 
 
