got overdue for clerk to work

--- a/books/templates/books/clerk/overdue.html
+++ b/books/templates/books/clerk/overdue.html
@@ -15,9 +15,9 @@
 
 		{% for book in books %}	
 		<tr>
-			<td> {{book.bid_id}}</td>
-			<td> {{book.callNumber_id}}</td>
-			<td> {{book.copyNo_id}} </td>
+			<td> {{book.0}}</td>
+			<td> {{book.1}}</td>
+			<td> {{book.2}} </td>
 		</tr>
 		{% endfor %}
 	</table>
