--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -42,7 +42,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="">CompSci Bookstore</a>
+              <a class="navbar-brand" href="">The U Library</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
@@ -79,32 +79,31 @@
       </ol>
       <div class="carousel-inner">
         <div class="item active">
-          <img src="{{STATIC_URL}}images/books/wa2.jpg" />
+          <img src="{{STATIC_URL}}images/books/library7.jpg" />
           <div class="container">
             <div class="carousel-caption">
-              <h1>CompSci Bookstore</h1>
-			  <p> Buy, borrow, manage and think CompSci Bookstore. Our online computer science bookstore system would enable you to borrow, return, buy computer science and mathematics books as a borrower, manage transactions as a manager, and serve others as a clerk. Sign up today! </p>
+              <h1>The U Library</h1>
+			  <p> Borrow, read and study at the U Library. Our staff will help you find the books you need. Come talk to one of us today!</p>
               <p><a class="btn btn-lg btn-primary" href="/sign_up" role="button">Sign up today</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-			<img src="{{STATIC_URL}}images/books/a2.jpg">
+			<img src="{{STATIC_URL}}images/books/library.jpg">
           <div class="container">
             <div class="carousel-caption">
-              <h1>CompSci Bookstore</h1>
-			  <p></p>
-			  <p> CompSci Bookstore exploits advanced parallel and distributed computing, database, and security techniques to guarantee the efficiency and safety of online book trading transactions. </p>
+              <h1>The U Library</h1>
+			  <p>The U Library is located at the U university in the beautiful city of Vancouver. We are currently hiring full time librarians and summer librarian assistants.</p>
               <p><a class="btn btn-lg btn-primary" href="" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-			<img src="{{STATIC_URL}}images/books/a1.jpg">
+			<img src="{{STATIC_URL}}images/books/library4.jpg">
           <div class="container">
             <div class="carousel-caption">
-              <h1>CompSci Bookstore</h1>
-              <p>CompSci Bookstore, Inc is a startup company located in the beautiful city of Vancouver. We are currently recruiting full time programmers and summer interns.</p>
+              <h1>The U Library</h1>
+              <p></p>
               <p><a class="btn btn-lg btn-primary" href="" role="button">Browse gallery</a></p>
             </div>
           </div>
@@ -127,7 +126,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014 CompSci Bookstore, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2014 The U Library &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div><!-- /.container -->
@@ -141,4 +140,4 @@
 	<script src="{% static 'bootstrap/assets/js/docs.min.js' %}"></script>
   </body>
 </html>
-
+<!--images from: http://alkylphenol.org/Images/library.jpg and http://www.tcd.ie/wiser/research-policy/library/library.jpg and http://bookriotcom.c.presscdn.com/wp-content/uploads/2013/04/Stockholm-Public-Library-Interior-2.jpg -->
