--- a/books/templates/books/borrower/check_account.html
+++ b/books/templates/books/borrower/check_account.html
@@ -5,6 +5,12 @@
  <div class="container">
 
 	 <h3> Books borrowed </h3>
+     <head>
+         <style>
+             td
+             {padding-right:60px;}
+             </style>
+     </head>
 	 <table>
 		 <tr>
 			 <td> Book Number </td>
