--- a/books/templates/books/borrower/pay.html
+++ b/books/templates/books/borrower/pay.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h2> Congratulations, you have paid your fines.</h2>
+<h2> You have no fines to pay.</h2>
 
 
 {% endblock %}
