--- a/books/templates/books/borrower/search.html
+++ b/books/templates/books/borrower/search.html
@@ -5,6 +5,12 @@
 <div class="container">
 	{% if flag %}
 	 <h3> Search Result </h3>
+     <head>
+         <style>
+             td
+             {padding-right:60px;}
+             </style>
+     </head>
 	<table>
 		 <tr>
 			 <td> Call Number </td>
@@ -30,6 +36,7 @@
 
 
 	{% endif %}
+    <p></p>
 	</div>
 
 
