--- a/books/templates/books/borrower.html
+++ b/books/templates/books/borrower.html
@@ -3,10 +3,10 @@
 
 {% block menu %} 
 
-<li><a href="/borrower/search"> Search for Book</a></li>
+<li><a href="/borrower/search"> Search for a Book</a></li>
 <li><a href="/borrower/check_account"> Check Account </a></li>
-<li><a href="/borrower/hold"> Place Hold Request</a></li>
-<li><a href="/borrower/pay"> Pay Fine</a></li>
+<li><a href="/borrower/hold"> Place a Hold Request</a></li>
+<li><a href="/borrower/pay"> Pay Fines</a></li>
 
 
 {% endblock %}
