--- a/books/templates/books/clerk/add_borrower.html
+++ b/books/templates/books/clerk/add_borrower.html
@@ -3,7 +3,7 @@
 {% block content%}
 
 	{% if registered %}
-	<h2> You registration has been successful.</h2>
+	<h2> Your registration has been successful.</h2>
 		<meta http-equiv="refresh" content="3;url=/clerk/" />
 	{% else %}
      <div class="container">
@@ -19,4 +19,5 @@
 
     </div> <!-- /container -->
 	{% endif %}
+    <p></p>
 {% endblock %}
