--- a/books/templates/books/clerk/overdue.html
+++ b/books/templates/books/clerk/overdue.html
@@ -5,7 +5,12 @@
  <div class="container">
 
 	 <h3> Overdue Items</h3>
-
+    <head>
+    <style>
+    td
+    {padding-right:60px;}
+    </style>
+    </head>
 	 <table>
 		 <tr>
 			 <td> Borrower  </td>
@@ -21,7 +26,8 @@
 		</tr>
 		{% endfor %}
 	</table>
-
+    <p></p>
+    
 
 	</div>
 {% endblock %}
