--- a/books/templates/books/clerk.html
+++ b/books/templates/books/clerk.html
@@ -3,10 +3,10 @@
 
 
 {% block menu %} 
-<li><a href="/clerk/add_borrower"> Add Borrower</a></li>
-<li><a href="/clerk/checkout"> Checkout Item</a></li>
-<li><a href="/clerk/process_return"> Process Return</a></li>
-<li><a href="/clerk/overdue"> Check Overdue</a></li>
+<li><a href="/clerk/add_borrower"> Add a Borrower</a></li>
+<li><a href="/clerk/checkout"> Check-out an Item</a></li>
+<li><a href="/clerk/process_return"> Process a Return</a></li>
+<li><a href="/clerk/overdue"> Check Overdue Items</a></li>
 
 {% endblock %}
 
