--- a/books/templates/books/librarian/add_book.html
+++ b/books/templates/books/librarian/add_book.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% if registered %}
-	<h2> You book has been added.</h2>
+	<h2> Your book has been added.</h2>
 		<meta http-equiv="refresh" content="3;url=/librarian/" />
 		{% else %}
  <div class="container">
