--- a/books/templates/books/librarian/book_report.html
+++ b/books/templates/books/librarian/book_report.html
@@ -6,6 +6,12 @@
 
 
  <div class="container">
+     <head>
+        <style>
+            td
+            {padding-right:60px;}
+            </style>
+     </head>
 
 	 {% if flag %}
 
@@ -33,10 +39,11 @@
         <h2 class="form-signin-heading">Related Subject</h2>
 
         <input type="text" class="form-control" name="subject" placeholder="subject(optional)">
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Get report</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Get Report</button>
 	</form>
 
 	{% endif %}
+    <p></p>
 
     </div> <!-- /container -->
 
