--- a/books/templates/books/librarian.html
+++ b/books/templates/books/librarian.html
@@ -2,9 +2,9 @@
 {%block title%} Librarian - Toshokan{%endblock%}
 
 
-{% block menu %} 
-<li><a href="/librarian/add_book"> Add Book</a></li>
-<li><a href="/librarian/book_report"> Generate BookReport</a></li>
+{% block menu %}
+<li><a href="/librarian/add_book"> Add a Book</a></li>
+<li><a href="/librarian/book_report"> Generate Book Report</a></li>
 <li><a href="/librarian/popular_book"> Popular Items</a></li>
 
 
