--- a/books/templates/books/borrower/search.html
+++ b/books/templates/books/borrower/search.html
@@ -31,7 +31,7 @@
 		{% csrf_token %}
         <h2 class="form-signin-heading">Search Books</h2>
 		{{form.as_p}}
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Search</button>
 	</form>
 
 
