updated check account and index

--- a/books/templates/books/borrower/check_account.html
+++ b/books/templates/books/borrower/check_account.html
@@ -4,7 +4,7 @@
 
  <div class="container">
 
-	 <h3> Books borrowed </h3>
+	 <h3> Books Borrowed </h3>
      <head>
          <style>
              td
@@ -27,7 +27,7 @@
 		{% endfor %}
 	</table>
 
-	<h3> Oustanding fines</h3>
+	<h3> Outstanding Fines</h3>
 	<table>
 		 <tr>
 			 <td> Amount </td>
