--- a/books/templates/books/index.html
+++ b/books/templates/books/index.html
@@ -1,6 +1,6 @@
 {% extends "books/base.html" %}
 
-{%block title%} Index - Toshokan{%endblock%}
+{%block title%} The U Library {%endblock%}
 {% block menu%}
 	{% if type = 0 %}
 					<li><a href="/borrower/">Borrower</a></li>
