updated other tokoshan stuff
for borrower, clerk, librarian, signin, sign up htmls

--- a/books/templates/books/borrower.html
+++ b/books/templates/books/borrower.html
@@ -1,5 +1,5 @@
 {% extends "books/base.html" %}
-{%block title%} Borrower - Toshokan{%endblock%}
+{%block title%} Borrower - The U Library {%endblock%}
 
 {% block menu %} 
 
