--- a/books/templates/books/clerk.html
+++ b/books/templates/books/clerk.html
@@ -1,5 +1,5 @@
 {% extends "books/base.html" %}
-{%block title%} Clerk - Toshokan{%endblock%}
+{%block title%} Clerk - The U Library {%endblock%}
 
 
 {% block menu %} 
