--- a/books/templates/books/librarian.html
+++ b/books/templates/books/librarian.html
@@ -1,5 +1,5 @@
 {% extends "books/base.html" %}
-{%block title%} Librarian - Toshokan{%endblock%}
+{%block title%} Librarian - The U Library {%endblock%}
 
 
 {% block menu %}
