--- a/books/templates/books/sign_up.html
+++ b/books/templates/books/sign_up.html
@@ -11,7 +11,7 @@
 {% load staticfiles %}
 	
 
-    <title>Signup - Toshokan</title>
+    <title>Signup - The U Library </title>
 
     <!-- Bootstrap core CSS -->
 	<link href="{% static 'bootstrap/css/bootstrap.min.css' %}"rel="stylesheet">
